--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta charset="utf-8" />
+    <meta name="author" content="Md. Josim Uddin Roni" />
+    <meta name="description" content="simple react app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,20 +20,29 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>React Counter App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <header class="headeroption">
+      <h2>React Counter Application</h2>
+    </header>
+    <section class="content">
+      <div class="container">
+        <div class="row">
+          <div id="root"></div>
+        </div>
+      </div>
+    </section>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <footer class="footeroption">
+      <h4>
+        Copyright &copy;
+        <script type="text/javascript">
+          var d = new Date();
+          document.write(d.getFullYear());
+        </script>
+        <a href="https://github.com/ronigithub/">Md. Josim Uddin Roni</a>
+      </h4>
+    </footer>
   </body>
 </html>
