--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="author" content="Md. Josim Uddin Roni" />
     <meta name="description" content="simple react app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
